# 580-bci-group

./: .gitignore  README.md  alex2.hdf5  alex4.hdf5  alex5.hdf5  alex6.hdf5  alex7.hdf5  alex8.hdf5  class.hdf5  commands.py  control.py  directions.py  gather_data.py  model.py  pyproject.toml  run2.hdf5  run5.hdf5  test.py  trainer.py
best_model/: mean.npy  saved_model.pb  std.npy
best_model/variables/: variables.data-00000-of-00001  variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
data/long/: alex1.hdf5  alex10.hdf5  alex3.hdf5  alex9.hdf5  siri4.hdf5
lib/: cortex.py
models/2020-02-13--09_39_33--model/: saved_model.pb
models/2020-02-13--09_47_52--model/: saved_model.pb
models/2020-02-18--11_25_55--model/: saved_model.pb
models/2020-02-18--11_33_29--model/: saved_model.pb
models/2020-02-18--11_48_17--model/: saved_model.pb
models/2020-02-18--11_52_40--model/: saved_model.pb
models/2020-02-18--11_54_56--model/: saved_model.pb
models/2020-02-20--10_10_59--model/: saved_model.pb
models/2020-02-20--10_16_09--model/: saved_model.pb
models/2020-02-20--10_20_11--model/: saved_model.pb
models/2020-02-20--10_20_53--model/: saved_model.pb
models/2020-02-20--10_21_28--model/: saved_model.pb
models/2020-02-20--10_23_56--model/: saved_model.pb
models/2020-02-20--10_24_33--model/: saved_model.pb
models/2020-02-20--10_30_14--model/: saved_model.pb
models/2020-02-20--10_32_02--model/: saved_model.pb
models/2020-02-20--10_37_23--model/: saved_model.pb
models/2020-02-20--10_37_44--model/: saved_model.pb
(+60 files in other folders)
